# cpl-cpoa

./: .coderabbit.yaml  .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PROPRIETARY.md  README.md  README_PUBLIC.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
agents/: adk_tools.py  config.py  explanation.py  prompts.py  run.py
agents/onboarding_orchestrator/: agent.py
app/api/: main.py  store.py
app/web/: middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/web/app/: globals.css  layout.tsx  page.tsx
app/web/app/agents/: page.tsx
app/web/app/architecture/: page.tsx
app/web/components/: Compass.tsx  DecisionBadge.tsx  Nav.tsx
app/web/lib/: api.ts  markdown.tsx  types.ts
corpus/cpoa_fixture_docs/: fixtures.json
corpus/cpoa_policy_pack/: cpoa_policy.json
corpus/eu_ai_act_articles/: eu_ai_act.json
corpus/nist_ai_rmf_subset/: nist_ai_rmf.json
corpus/nsa_mcp_csi/: nsa_mcp_csi.json
cpoa/: evals.py  loader.py
cpoa/schemas/: __init__.py  agent_passport.py  ai_bom.py  candidate_manifest.py  common.py  discovery_report.py  evidence.py  policy_envelope.py  validation.py
cpoa/services/: _helpers.py  agent_discovery.py  artifacts.py  decisioning.py  discovery.py  engine.py  evidence_log.py  exports.py  govern.py  grounding.py  grounding_vertex.py  hashing.py  injection.py  manage.py  operate.py  optimize.py  pdf_export.py  policy.py  remediation.py  scoring.py  signing.py  tracing.py  validation_suite.py
design/stitch/: DESIGN.md
design/stitch/agents/: code.html
design/stitch/landing/: code.html
design/stitch/runs/: code.html
docs/: USER_JOURNEYS.md
docs/architecture/: ARCHITECTURE.md
docs/canonical/: CPOA-GFS-AIAC-2026-CANONICAL.md
docs/security/: DATA_AND_IP_BOUNDARY.md  MCP_SECURITY_BASELINE.md  SECURITY.md  THREAT_MODEL.md
docs/submission/: ACCEPTANCE.md  DEVPOST_DRAFT.md  JUDGE_RUNBOOK.md  RECORDING_CHECKLIST.md  RULES_RECONCILIATION.md  VIDEO_SCRIPT.md
fixtures/candidates/: budget_runaway_research_agent.json  crm_write_missing_owner.json  grounding_required_policy_agent.json  healthcare_phi_support_agent.json  privileged_admin_agent.json  prompt_injected_mcp_agent.json  safe_research_agent.json  unmaintained_mcp_server_agent.json
fixtures/comparisons/: grounding_demo.json
fixtures/policy_packs/: baseline_enterprise_v0_1.json
fixtures/registry/: google_agent_registry_fixture.json
infra/: org_policy_allow_public.yaml
infra/agent_engine/: README.md
infra/cloudrun/: Dockerfile.api  Dockerfile.mcp  Dockerfile.web  cloudbuild.yaml  deploy.sh
mcp_servers/onboarding_tools/: security.py  server.py  tools.py
scripts/: run_demo.py  run_evals.py  seed_corpus.py  seed_vertex_search.py
tests/evals/: expected_decisions.yaml  test_evals.py
tests/integration/: test_agents.py  test_api.py  test_compass_api.py  test_discovery_api.py  test_grounding.py  test_manage_api.py  test_pipeline.py
tests/security/: conftest.py  test_audit_log_emission.py  test_mcp_auth.py  test_mcp_replay.py  test_mcp_role_binding.py  test_prompt_injection_filter.py  test_schema_validation.py
tests/unit/: test_agent_discovery.py  test_bundle_hash_recompute.py  test_decisioning.py  test_govern.py  test_grounding_mode.py  test_grounding_resilience.py  test_grounding_source_urls.py  test_hashing.py  test_import_smoke.py  test_manage.py  test_operate.py  test_optimize.py  test_pdf_export.py  test_remediation.py  test_sanitize_dashes.py  test_schemas.py  test_signing.py
(+10 files in other folders)
