[project]
name = "cpoa"
version = "0.4.0"
description = "ClearPoint Onboarding Agent — net-new ADK/Gemini multi-agent system for the Google for Startups AI Agents Challenge (Track 1)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary — ClearPoint Logic. Challenge/judge access only." }
dependencies = [
    "google-adk",
    "google-cloud-aiplatform",
    "mcp",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "python-dotenv",
    "pyyaml",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]  # test fixtures/parametrize tables legitimately exceed line length
"app/api/**" = ["B008"]  # FastAPI Depends() in argument defaults is the framework idiom

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cpoa*", "agents*", "mcp_servers*", "app*"]
